--- a/frontend-next/styles/Home.module.css
+++ b/frontend-next/styles/Home.module.css
@@ -43,6 +43,10 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .title,
@@ -74,9 +78,10 @@
 }
 
 .card {
+  background-color: #1d2025;
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -127,4 +132,10 @@
   top: 1.5%;
   left: 5%;
   display: flex;
+}
+
+.epoch{
+  text-align: left;
+  color:#444444;
+  font-size: xx-small;
 }
