mint underlying tokens on top bar

--- a/frontend-next/styles/Home.module.css
+++ b/frontend-next/styles/Home.module.css
@@ -83,16 +83,16 @@
   }
 }
 
-.pricesContainer{
+.rightContainer{
   position: fixed;
   top: 0.3%;
   right: 0%;
   display: flex;
 }
 
-.home_icon{
+.leftContainer{
   position: fixed;
-  top: 1.5%;
+  top: 0.5%;
   left: 5%;
   display: flex;
 }
