added logo to top bar

--- a/frontend-next/styles/Home.module.css
+++ b/frontend-next/styles/Home.module.css
@@ -65,6 +65,15 @@
   display: flex;
 }
 
+.centerContainer{
+  color: white;
+  font-size: x-large;
+  position: fixed;
+  top: 0.5%;
+  right: 47%;
+  display: flex;
+}
+
 .leftContainer{
   position: fixed;
   top: 0.5%;
