--- a/frontend-next/styles/Home.module.css
+++ b/frontend-next/styles/Home.module.css
@@ -59,7 +59,7 @@
 }
 
 .rightContainer{
-  position: fixed;
+  position: absolute;
   top: 0.3%;
   right: 0%;
   display: flex;
@@ -68,14 +68,14 @@
 .centerContainer{
   color: white;
   font-size: x-large;
-  position: fixed;
+  position: absolute;
   top: 0.5%;
   right: 47%;
   display: flex;
 }
 
 .leftContainer{
-  position: fixed;
+  position: absolute;
   top: 0.5%;
   left: 5%;
   display: flex;
